--- a/style.css
+++ b/style.css
@@ -83,4 +83,26 @@ body{
    margin: 50px;
   }
   
+
+  .presentacion_enlace_link {
+    background-color: #22D4FD;
+    width: 280px;
+    text-align: center;
+    border-radius: 16px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: #000000;
+    font-family: 'Montserrat', sans-serif;
+    margin-left: -20px;
+    transition: all 0.3s ease; /* Transición suave */
+}
+
+.presentacion_enlace_link:hover {
+    background-color: #1aa7d6;
+    transform: translateY(-5px); /* Efecto de movimiento */
+    box-shadow: 0px 4px 15px rgba(34, 212, 253, 0.4);
+}
+
   
